# continuum-nlp

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
apps/api/agents/: interview.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py
apps/api/db/: neo4j.py  postgres.py  redis.py
apps/api/evaluation/data/synthetic_conversations/: conv-001.json  (+200 more)
apps/api/middleware/: __init__.py  logging.py  metrics.py  request_id.py  request_size.py  security.py
apps/api/models/: __init__.py  errors.py  ontology.py  postgres.py  provenance.py  schemas.py
apps/api/routers/: ask.py  auth.py  decisions.py  graph.py  users.py
apps/api/scripts/: densify.py  eval_retrieval.py  migrate_graph.py  migrate_rationale.py  reembed_all.py
apps/api/services/: decision_analyzer.py  embeddings.py  entity_cache.py  entity_resolver.py  extractor.py  graph_rag.py  llm.py  parser.py  validator.py
apps/api/services/llm_providers/: __init__.py  base.py  nvidia.py  ollama.py
apps/api/tests/: __init__.py  conftest.py  factories.py  test_auth.py  test_e2e.py  test_embedding_cache.py  test_entity_cache.py  test_interview_state.py  test_json_extraction.py  test_llm.py  test_prompt_sanitizer.py  test_retry_logic.py
apps/api/tests/contract/: __init__.py  schemas.py  test_decisions_contract.py  test_graph_contract.py
apps/api/tests/e2e/: __init__.py
apps/api/tests/integration/: __init__.py  test_ask_router.py  test_entity_resolver_live.py  test_graph_rag_service.py  test_phase3_features.py
apps/api/tests/load/: CROSS-BROWSER-TESTING.md  README.md  __init__.py  load_test.js  load_test.py
apps/api/tests/mocks/: __init__.py  llm_mock.py  neo4j_mock.py
apps/api/tests/performance/: __init__.py  test_api_performance.py
apps/api/tests/routers/: test_ask.py  test_decisions.py  test_graph.py
apps/api/tests/services/: __init__.py  test_decision_analyzer.py  test_embeddings.py  test_entity_resolver.py  test_extractor.py  test_graph_rag.py  test_validator.py
apps/api/tests/smoke/: KNOWN_ISSUES.md  __init__.py  conftest.py  test_ask_pipeline.py  test_decision_detail.py  test_embeddings_dim.py  test_graph_data.py  test_health.py  test_indexes_exist.py
apps/api/tests/utils/: test_prompt_sanitizer.py  test_sanitize.py
apps/api/utils/: __init__.py  cache.py  circuit_breaker.py  json_extraction.py  logging.py  metrics.py  prompt_sanitizer.py  retry.py  sanitize.py  vectors.py
(+77 files in other folders)
